--- a/index.html
+++ b/index.html
@@ -114,13 +114,14 @@
           </div>
           <h2 class="about__greeting">Welcome</h2>
           <p class="about__text">
-            Website welcome pages are typically more prevalent at personal
-            websites, portfolios, and traditional businesses. They are less
-            popular on news websites (where the headline story acts as the
-            introduction). Of course, welcome areas aren’t considered necessary
-            on sites with a clear purpose and established audience – there would
-            be no point having a welcome page at CNN.com, as their user base
-            most likely already knows who they are. :)
+            This is Hafed omar from libya student. Website welcome pages are
+            typically more prevalent at personal websites, portfolios, and
+            traditional businesses. They are less popular on news websites
+            (where the headline story acts as the introduction). Of course,
+            welcome areas aren’t considered necessary on sites with a clear
+            purpose and established audience – there would be no point having a
+            welcome page at CNN.com, as their user base most likely already
+            knows who they are. :)
           </p>
         </div>
         <div class="aside__social">
@@ -132,7 +133,7 @@
               class="social__link"
               ><i class="fab fa-2x fa-linkedin social__icon"></i
             ></a>
-            <a href="https://github.com" class="social__link" target="_blank">
+            <a href="https://github.com/hafedEfheij" class="social__link" target="_blank">
               <i class="fab fa-2x fa-github social__icon"></i
             ></a>
             <a
