--- a/postOne.html
+++ b/postOne.html
@@ -189,12 +189,14 @@
           </div>
           <h2 class="about__greeting">Welcome</h2>
           <p class="about__text">
-            Welcome to Lunch Break! My name is Olga, and I started this blog
-            because as a full-time working mom with affinity for sport, I had no
-            clue how to fit the latter in my daily routine. The only solution I
-            could think of was my lunch break. And it turns out you can do so
-            many things with the 60-minute window! I hope you find something
-            useful here :)
+          This is Hafed omar from libya student. Website welcome pages are
+          typically more prevalent at personal websites, portfolios, and
+          traditional businesses. They are less popular on news websites
+          (where the headline story acts as the introduction). Of course,
+          welcome areas aren’t considered necessary on sites with a clear
+          purpose and established audience – there would be no point having a
+          welcome page at CNN.com, as their user base most likely already
+          knows who they are. :)
           </p>
         </div>
         <div class="aside__social">
@@ -207,7 +209,7 @@
               target="_blank"
               ><i class="fab fa-2x fa-linkedin social__icon"></i
             ></a>
-            <a href="https://github.com/" class="social__link" target="_blank">
+            <a href="https://github.com/hafedEfheij" class="social__link" target="_blank">
               <i class="fab fa-2x fa-github social__icon" target="_blank"></i
             ></a>
             <a
